--- a/Analytics/MainWindow.xaml
+++ b/Analytics/MainWindow.xaml
@@ -10,7 +10,7 @@
     <Window.DataContext>
         <local:ViewModel/>
     </Window.DataContext>
-    <Grid>
+    <Grid x:Name="Main">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="85*"/>
             <ColumnDefinition Width="299*"/>
@@ -47,46 +47,55 @@
         <Border Grid.Column="1" Grid.Row="1">
             <ScrollViewer CanContentScroll="True" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
                 <StackPanel x:Name="Zone">
-                    <StackPanel Orientation="Vertical">
-                        <chart:SfChart Height="450" Width="1100" Header="График продаж">
-                            <chart:SfChart.Legend>
-                                <chart:ChartLegend/>
-                            </chart:SfChart.Legend>
-                            <chart:SfChart.PrimaryAxis>
-                                <chart:CategoryAxis/>
-                            </chart:SfChart.PrimaryAxis>
-                            <chart:SfChart.SecondaryAxis>
-                                <chart:NumericalAxis/>
-                            </chart:SfChart.SecondaryAxis>
-                            <chart:ColumnSeries  Label="Затраты" ItemsSource="{Binding Year}" XBindingPath="Year" YBindingPath="ProductA"/>
-                            <chart:ColumnSeries Label="Доход" ItemsSource="{Binding Year}" XBindingPath="Year" YBindingPath="ProductB"/>
-                        </chart:SfChart>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock x:Name="TB_Shop" Text="Магазин" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="15" Foreground="#FF43CE6D" FontSize="24"/>
-                        <ComboBox x:Name="CB_Shop" Margin="15" BorderBrush="#F4E8D3" Background="#F4E8D3" Foreground="#FF43CE6D" Width="450" FontSize="24"/>
-                        <Border x:Name="SaveShop" Background="#F4E8D3" Margin="15" CornerRadius="10" HorizontalAlignment="Center" Width="150" Height="60" MouseLeftButtonUp="SaveProduct_MouseLeftButtonUp">
-                            <Label Content="Выбрать" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF43CE6D" FontSize="24"/>
-                        </Border>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock x:Name="TB_Product" Text="Продукт" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="15" Foreground="#FF43CE6D" FontSize="24"/>
-                        <ComboBox x:Name="CB_Product" Margin="15" BorderBrush="#F4E8D3" Background="#F4E8D3" Foreground="#FF43CE6D" Width="450" FontSize="24"/>
-                        <Border x:Name="Save" Background="#F4E8D3" Margin="15" CornerRadius="10" HorizontalAlignment="Center" Width="150" Height="60" MouseLeftButtonUp="SaveShop_MouseLeftButtonUp">
-                            <Label Content="Выбрать" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF43CE6D" FontSize="24"/>
-                        </Border>
-                    </StackPanel>
+
                 </StackPanel>
             </ScrollViewer>
         </Border>
         <StackPanel x:Name="CloneShop" Orientation="Vertical" Margin="5" Visibility="Hidden">
-            
+            <StackPanel Orientation="Horizontal">
+                <TextBlock x:Name="TB_Shop" Text="Магазин" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="15" Foreground="#FF43CE6D" FontSize="24"/>
+                <ComboBox x:Name="CB_Shop" Margin="15" BorderBrush="#F4E8D3" Background="#F4E8D3" Foreground="#FF43CE6D" Width="450" FontSize="24"/>
+                <Border x:Name="SaveShop" Background="#F4E8D3" Margin="15" CornerRadius="10" HorizontalAlignment="Center" Width="150" Height="60" MouseLeftButtonUp="SaveProduct_MouseLeftButtonUp">
+                    <Label Content="Выбрать" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF43CE6D" FontSize="24"/>
+                </Border>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock x:Name="TB_Product" Text="Продукт" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="15" Foreground="#FF43CE6D" FontSize="24"/>
+                <ComboBox x:Name="CB_Product" Margin="15" BorderBrush="#F4E8D3" Background="#F4E8D3" Foreground="#FF43CE6D" Width="450" FontSize="24"/>
+                <Border x:Name="Save" Background="#F4E8D3" Margin="15" CornerRadius="10" HorizontalAlignment="Center" Width="150" Height="60" MouseLeftButtonUp="SaveShop_MouseLeftButtonUp">
+                    <Label Content="Выбрать" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FF43CE6D" FontSize="24"/>
+                </Border>
+            </StackPanel>
         </StackPanel>
-        <StackPanel x:Name="CloneProduct" Orientation="Vertical" Margin="5" Visibility="Hidden">
-            
+        <StackPanel x:Name="CloneChartMonth" Orientation="Vertical" Margin="5" Visibility="Hidden">
+                <chart:SfChart Height="450" Width="1100" Header="График продаж">
+                    <chart:SfChart.Legend>
+                        <chart:ChartLegend/>
+                    </chart:SfChart.Legend>
+                    <chart:SfChart.PrimaryAxis>
+                        <chart:CategoryAxis/>
+                    </chart:SfChart.PrimaryAxis>
+                    <chart:SfChart.SecondaryAxis>
+                        <chart:NumericalAxis/>
+                    </chart:SfChart.SecondaryAxis>
+                    <chart:ColumnSeries  Label="Доход" ItemsSource="{Binding Month}" XBindingPath="Months" YBindingPath="ProductA"/>
+                    <chart:ColumnSeries Label="Затраты" ItemsSource="{Binding Month}" XBindingPath="Months" YBindingPath="ProductB"/>
+                </chart:SfChart>
         </StackPanel>
-        <StackPanel x:Name="CloneAnalytics" Orientation="Vertical" Margin="5" Visibility="Hidden">
-
+        <StackPanel x:Name="CloneChartYear" Orientation="Vertical" Margin="5" Visibility="Hidden">
+            <chart:SfChart Height="450" Width="1100" Header="График продаж">
+                <chart:SfChart.Legend>
+                    <chart:ChartLegend/>
+                </chart:SfChart.Legend>
+                <chart:SfChart.PrimaryAxis>
+                    <chart:CategoryAxis/>
+                </chart:SfChart.PrimaryAxis>
+                <chart:SfChart.SecondaryAxis>
+                    <chart:NumericalAxis/>
+                </chart:SfChart.SecondaryAxis>
+                <chart:ColumnSeries  Label="Доход" ItemsSource="{Binding Year}" XBindingPath="Years" YBindingPath="ProductA"/>
+                <chart:ColumnSeries Label="Затраты" ItemsSource="{Binding Year}" XBindingPath="Years" YBindingPath="ProductB"/>
+            </chart:SfChart>
         </StackPanel>
     </Grid>
 </Window>
